--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>To Create a webapp 1st time using git bash</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>hello webbee</h1>
