--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>To Create a webapp 1st time using git bash</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="script.js">
 </head>
 <body>
 	<h1>hello webbee</h1>
